shell/iptables
# Generated by iptables-save v1.4.7 on Fri Sep 13 21:17:48 2019
*nat
:PREROUTING ACCEPT [32:2063]
:POSTROUTING ACCEPT [12:760]
:OUTPUT ACCEPT [12:760]
COMMIT
# Completed on Fri Sep 13 21:17:48 2019
# Generated by iptables-save v1.4.7 on Fri Sep 13 21:17:48 2019
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [36:3120]
-A INPUT -s 210.211.121.20/32 -j DROP 
-A INPUT -s 116.213.107.8/32 -j DROP 
-A INPUT -s 13.229.102.194/32 -j DROP 
-A INPUT -s 122.165.247.206/32 -j DROP 
-A INPUT -s 183.192.95.29/32 -j DROP 
-A INPUT -s 192.168.0.0/16 -j ACCEPT 
-A INPUT -s 172.31.254.0/24 -j ACCEPT 
-A INPUT -d 192.168.1.19/32 -p tcp -m multiport --dports 21,22,80,10050 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -d 192.168.1.19/32 -p udp -m multiport --dports 69,123 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT 
-A OUTPUT -m state --state NEW,ESTABLISHED -j ACCEPT 
COMMIT
# Completed on Fri Sep 13 21:17:48 2019
